--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "../lvo-easy-api/app.js", 
+      "program": "../lvo-easy-api/server.js", 
       "console": "integratedTerminal"
     }
   ]
